# dashboard

./: .env.template  .gitignore  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  template.yml
.github/: CODEOWNERS  settings.yml
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: publish.yml  release.yml  version.yml
infra/: Makefile  samconfig.toml
src/: App.vue  bucket-policy.yml  bucket.yml  cloudfront-distribution.yml  cloudfront-oai.yml  dns-record.yml  domain.yml  main.rs  main.ts  network-ssl-cert.yml  s3-bucket.yml  ss-bucket.yml  ss-policy.yml
src/DatasetsPage/: DatasetsPage.vue  DatasetsTable.vue
src/HomePage/: HomePage.vue
src/LoginPage/: LoginPage.vue
src/MainLayout/: MainLayout.vue
src/NewRequestPage/: NewRequestPage.vue
src/RequestsPage/: RequestsPage.vue  RequestsTable.vue
src/ThreadPage/: ThreadPage.vue
src/app/: .env.template  .gitignore  package-lock.json  package.json  tailwind.config.js
src/app/src/: App.vue  amplify.ts  main.ts
src/app/src/CookieService/: index.ts
src/app/src/DatasetsPage/: DatasetsTable.vue
src/app/src/DomainsPage/: DomainsPage.vue  DomainsTable.vue  NewDomainDialog.vue
src/app/src/HomePage/: HomePage.vue
src/app/src/MainLayout/: MainLayout.vue
src/app/src/OrganizationPage/: NewOrganizationDialog.vue  OrganizationPage.vue  (+1 more)
src/assets/: output.css
src/cloudfront/: cloudfront-distribution.yml
src/github/: comments_response.rs  github_client.rs  mod.rs
src/router/: index.ts
src/s3/: mod.rs  s3-bucket.yml  s3_client.rs
(+44 files in other folders)
