[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
aws-config = "1.5.1"
aws-sdk-dynamodb = "1.33.0"
aws-sdk-s3 = "1.35.0"
cargo-lambda = "1.3.0"
lambda = "0.0.1"
lambda_http = "0.11.4"
search = "1.0.0-beta"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"
rocket = "=0.5.0-rc.4"
serde_json = "1.0"
serde = "1.0.193"